# Alexandria

./: .gitattributes  .gitignore  AlexandriaProject.MD  Cargo.toml  README.md  run.bat
.cargo/: config.toml
docs/: decisiones.md  errores.md  progreso.md
schemas/: 1_initial.sql  2_add_groups.sql  3_add_tags.sql  4_add_reorg.sql  5_add_storage_estimate.sql
src/: cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs
src/extractors/: archive.rs  audio.rs  ffprobe.rs  fs.rs  mod.rs  pdf.rs
src/groups/: matcher.rs  mod.rs
src/reorganizer/: checksum.rs  executor.rs  mod.rs  planner.rs  rollback.rs  space.rs  templates.rs
src/scanner/: mod.rs  walker.rs
src/server/: mod.rs  routes.rs
src/server/static/: app.js  index.html  style.css
src/system/: storage.rs
tests/: integration_tests.rs
